--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".friendList">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".chat_nav"></activity>
+        <activity android:name=".friendlistActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
