--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".new_post"></activity>
+        <activity android:name=".chat_camera"></activity>
+        <activity android:name=".chat_location" />
+        <activity android:name=".new_post" />
         <activity android:name=".post" />
         <activity android:name=".channel" />
         <activity android:name=".setting_main" />
