--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".temp"></activity>
         <activity android:name=".Login" />
         <activity android:name=".map" />
         <activity android:name=".chat_camera" />
@@ -18,7 +19,7 @@
         <activity android:name=".channel" />
         <activity android:name=".setting_main" />
         <activity android:name=".chat_nav" />
-        <activity android:name=".friendlistActivity"/>
+        <activity android:name=".friendlistActivity" />
         <activity android:name=".initial_page">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
