--- a/project/app/build.gradle
+++ b/project/app/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
+    implementation 'com.android.support:design:23.4.0'
+    implementation 'com.firebaseui:firebase-ui:0.6.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -38,4 +41,5 @@ dependencies {
     implementation 'androidx.mediarouter:mediarouter:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
