--- a/project/app/build.gradle
+++ b/project/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.mediarouter:mediarouter:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:1.0.2'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     implementation 'com.android.support:support-annotations:28.0.0'
 }
