--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.groupproject">
+
     <uses-feature
         android:name="android.hardware.camera2"
-        android:required="true" />
+        android:required="true"
+        />
+    <uses-permission
+        android:name="android.permission.INTERNET"/>
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -23,6 +27,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".chat_album"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -38,8 +43,7 @@
         <activity
             android:name=".map_main"
             android:label="@string/title_activity_map_main" />
-        <activity android:name=".post_display"/>
-        <activity android:name=".completeLogin" />
+        <activity android:name=".post_display" />
         <activity android:name=".Login" />
         <activity android:name=".map" />
         <activity android:name=".chat_camera" />
