--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -4,12 +4,9 @@
 
     <uses-feature
         android:name="android.hardware.camera2"
-
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-        android:required="true"
-        />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -29,7 +26,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".post_my"></activity>
+        <activity android:name=".profile"></activity>
+        <activity android:name=".post_my" />
         <activity android:name=".chat_album" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
