--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.groupproject">
+    package="com.example.groupproject" >
 
     <uses-feature
         android:name="android.hardware.camera2"
-
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-        android:required="true"
-        />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -28,8 +25,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".post_my"></activity>
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+        <activity android:name=".post_favorite" />
+        <activity android:name=".post_friend" />
+        <activity android:name=".post_my" />
         <activity android:name=".chat_album" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -57,7 +56,7 @@
         <activity android:name=".setting_main" />
         <activity android:name=".chat_nav" />
         <activity android:name=".friendlistActivity" />
-        <activity android:name=".initial_page">
+        <activity android:name=".initial_page" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
