--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
         <activity android:name=".post_favorite" />
         <activity android:name=".post_friend" />
 
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".profile"></activity>
+
+        <activity android:name=".profile"/>
 
         <activity android:name=".post_my" />
         <activity android:name=".chat_album" />
