--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -26,9 +26,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        <activity android:name=".map_points"></activity>
-        <activity android:name=".post_album"></activity>
+        <activity android:name=".SplashScreen"></activity>
+        <activity android:name=".map_points" />
+        <activity android:name=".post_album" />
         <activity android:name=".post_favorite" />
         <activity android:name=".post_friend" />
         <activity android:name=".profile" />
@@ -67,9 +67,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="FirebaseMessagingReceiver">
+
+        <service android:name=".FirebaseMessagingReceiver">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
